Added a new Header after the previous one

--- a/src/404.html
+++ b/src/404.html
@@ -54,6 +54,7 @@
 </head>
 <body>
     <h1>Page Not Found</h1>
+    <h4>Please review what you were searching!!</h4>
     <p>Sorry, but the page you were trying to view does not exist.</p>
 </body>
 </html>
