--- a/src/404.html
+++ b/src/404.html
@@ -57,8 +57,8 @@
     <h4>Please review what you were searching!!</h4>
     <p>Sorry, but the page you were trying to view does not exist.</p>
     <p>There may be various reasons for this:</p>
-    <p>      <i><b>(1)</b> You have entered incorrect/expired link!</i>
-    <p>      <i><b>(2)</b> The site you are trying to access is under maintenance!</i>
+    <p>      <b>(1)</b> <i>You have entered incorrect/expired link!</i>
+    <p>      <b>(2)</b> <i>The site you are trying to access is under maintenance!</i>
 </body>
 </html>
 <!-- IE needs 512+ bytes: https://blogs.msdn.microsoft.com/ieinternals/2010/08/18/friendly-http-error-pages/ -->
