Added an anchor with link to Wikipedia

--- a/src/404.html
+++ b/src/404.html
@@ -59,6 +59,10 @@
     <p>There may be various reasons for this:</p>
     <p>      <b>(1)</b> <i>You have entered incorrect/expired link!</i>
     <p>      <b>(2)</b> <i>The site you are trying to access is under maintenance!</i>
+    <p></p>
+    <p> For further info visit <a href="https://en.wikipedia.org/wiki/HTTP_404">this
+    link</a> !!! </p>
+
 </body>
 </html>
 <!-- IE needs 512+ bytes: https://blogs.msdn.microsoft.com/ieinternals/2010/08/18/friendly-http-error-pages/ -->
