--- a/src/404.html
+++ b/src/404.html
@@ -72,6 +72,10 @@
     <li><a
     href="http://websynthesis.com/fixing-wordpress-404-errors/">Websynthesis.com</a>
     </ul>
+    <br></br>
+    <blockquote>"If you find this new format of reporting helpful, I will be the
+    happiest!!"</blockquote>
+
 </body>
 </html>
 <!-- IE needs 512+ bytes: https://blogs.msdn.microsoft.com/ieinternals/2010/08/18/friendly-http-error-pages/ -->
