--- a/src/404.html
+++ b/src/404.html
@@ -77,7 +77,10 @@
     <blockquote>"If you find this new format of reporting helpful, I will be the
     happiest!!"</blockquote>
     <hr />
-
+    <br></br>
+    <p>Thank you for allowing me to make these changes!<br></br>
+       Regards,<br></br>
+       <img src="image.png" /></p>
 </body>
 </html>
 <!-- IE needs 512+ bytes: https://blogs.msdn.microsoft.com/ieinternals/2010/08/18/friendly-http-error-pages/ -->
