--- a/src/404.html
+++ b/src/404.html
@@ -63,15 +63,18 @@
     <p> For further info visit <a href="https://en.wikipedia.org/wiki/HTTP_404">this
     link</a> !!! </p>
     <br></br>
-    <p> You may want to look up the following sites as well: </p>
-    <ul>
-    <li><a
+
+    <div>
+        <p> You may want to look up the following sites as well: </p>
+        <ul>
+        <li><a
     href="https://www.lifewire.com/404-not-found-error-explained-2622936">Lifewire.com</a>
-    <li><a
+        <li><a
     href="https://www.prestashop.com/blog/en/404-not-found-error-how-to-fix-it/">Pretashop.com</a>
-    <li><a
+        <li><a
     href="http://websynthesis.com/fixing-wordpress-404-errors/">Websynthesis.com</a>
-    </ul>
+        </ul>
+    </div>
     <br></br>
     <hr />
     <blockquote>"If you find this new format of reporting helpful, I will be the
