Modified the Image

--- a/src/404.html
+++ b/src/404.html
@@ -83,7 +83,7 @@
     <br></br>
     <p>Thank you for allowing me to make these changes!<br></br>
        Regards,<br></br>
-       <img src="image.png" /></p>
+       <img src="tile.png" /></p>
 </body>
 </html>
 <!-- IE needs 512+ bytes: https://blogs.msdn.microsoft.com/ieinternals/2010/08/18/friendly-http-error-pages/ -->
